--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-    <section style="height: 900px;" class="bg-warning img-fluid">
+    <section>
         <header class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
