--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
                 </div>
                 <div class="col-md-6">
-                    <img class="d-block w-75 img-fluid" src="image-1/Group 33102.png" alt="">
+                    <img class="d-block w-75 img-fluid" src="Image-1/Group 33102.png" alt="">
                 </div>
 
             </div>
